2006-05-11  David Reveman  <davidr@novell.com>

	* src/window.c (moveResizeWindow): Fix typo, CWY should be CWX.
	(moveResizeWindow): Constrain Y position so that window titlebar is
	visible.
	(restoreWindowGeometry): Fix issue with going from maximized state
	to non-maximized state without changing the window size.

	* gnome/window-decorator/gnome-window-decorator.c
	(max_window_name_width): Make sure title text fit in titlebar.

2006-05-11  Dan Winship  <danw@novell.com>

	* plugins/gconf-compiz-utils.c (gconfStringToBinding): Treat "" as
	meaning "disabled"

2006-05-11  David Reveman  <davidr@novell.com>

	* gnome/window-decorator/gnome-window-decorator.c (action_menu_map):
	Don't show window action menu on desktop and dock windows.

	* src/event.c (handleEvent): Allow click on window decorations
	to trigger window action menu.

	* plugins/place.c (placeWindow): Place fullscreen and maximized
	windows correctly.
	(placeWindow): Only clip dialog position to screen if parent is
	visible in current viewport.

2006-05-09  David Reveman  <davidr@novell.com>

	* plugins/switcher.c (switchPaintThumb): Rearrange code so we handle
	the case when bindWindow fails.

	* src/paint.c (paintWindow): Bail out if window is not mapped.

	* src/window.c (bindWindow): Make sure window is mapped when
	getting the window pixmap. (bnc 173248)

	* plugins/compiz.schemas.in.in: Regen.

	* plugins/cube.c (CUBE_MIPMAP_DEFAULT): Enable by default as
	performance seem to be OK now when new mipmaps are only generated
	when necessary.

	* src/texture.c (enableTexture): Don't generate new mipmaps
	every time the texture is used.

2006-05-08  David Reveman  <davidr@novell.com>

	* plugins/switcher.c: Allow switcher to be initiated with prev
	bindings. (Quinn Storm)

2006-05-07  David Reveman  <davidr@novell.com>

	* plugins/compiz.schemas.in.in: Regen.

	* plugins/switcher.c: Add icon support, minimized windows support
	and allow switcher to show up when only one selectable window exist.
